# perspective

./: .travis.yml  package.json
cmake/: rapidjson.txt.in
cmake/arrow/: CMakeLists.txt
cpp/perspective/: CMakeLists.txt
cpp/perspective/src/cpp/: base.cpp  context_grouped_pkey.cpp  context_one.cpp  context_two.cpp  context_zero.cpp  emscripten.cpp  multi_sort.cpp  scalar.cpp  sparse_tree.cpp  table.cpp
cpp/perspective/src/include/perspective/: config.h  multi_sort.h  scalar.h
cpp/perspective/test/cpp/: simple.cpp
cpp/perspective/test/include/perspective/: simple.h
docker/python/: Dockerfile
examples/server/: client.html  package.json  server.js
examples/simple/: test.html
python/node/: .gitignore  README.md
python/perspective/: README.md
python/perspective/docs/: conf.py
python/perspective/perspective/core/: examples.py
python/perspective/perspective/core/data/: pd.py
python/table/: .gitignore  README.md  index.html  requirements.txt  setup.py  test.py
python/table/perspective/include/perspective/: numpy.h  python.h
python/table/perspective/include/perspective/python/: accessor.h  arrow.h  utils.h  view.h
python/table/perspective/src/: accessor.cpp  arrow.cpp  fill.cpp  numpy.cpp  python.cpp  table.cpp  utils.cpp  view.cpp
python/table/perspective/table/: __init__.py  _accessor.py  _constants.py  _data_formatter.py  _date_validator.py  _utils.py  table.py  view.py  view_config.py
python/table/perspective/tests/table/: test_remove.py  test_table.py  test_table_infer.py  test_table_numpy.py  test_table_pandas.py  test_to_format.py  test_update.py  test_view.py
python/table/perspective/tests/table/binding/: test_make_table.py  test_make_view.py  test_table.py
scripts/: build_python.js  build_python_node.js  build_python_table.js  ci_python.js  lint_python.js  lint_python_node.js  lint_python_table.js  test_python.js  test_python_node.js  test_python_table.js
